templates/ecommerce-oracle_template.yaml
---
# Source: ecommerce-oracle/charts/oracle12c/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle12c
  labels:
    
    app.kubernetes.io/name: oracle12c
    app.kubernetes.io/instance: oracle12c
    app.openshift.io/runtime: oracle 
    chart: oracle12c-0.1.0
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: listener
    port: 1521
    protocol: TCP
  - name: xmldb
    port: 5500
    protocol: TCP
  selector:
    app: oracle12c
    deployment: oracle12c
---
# Source: ecommerce-oracle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-ecommerce-oracle
  labels:
    helm.sh/chart: ecommerce-oracle-0.1.1
    app.kubernetes.io/name: ecommerce-oracle
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1-SNAPSHOT"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ecommerce-oracle
    app.kubernetes.io/instance: release-name
---
# Source: ecommerce-oracle/charts/oracle12c/templates/deployment.yaml
#
# Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle12c
  labels:
    
    app.kubernetes.io/name: oracle12c
    app.kubernetes.io/instance: oracle12c
    app.openshift.io/runtime: oracle 
    chart: oracle12c-0.1.0
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 100
      maxUnavailable: 100
    type: RollingUpdate
  selector:
    matchLabels:
      app: oracle12c
      deployment: oracle12c
  template:
    metadata:
      labels:
        app: oracle12c
        deployment: oracle12c
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: oracle12c
          image: quay.io/maximilianopizarro/oracle12c
          imagePullPolicy: "Always"
          ports:
            - containerPort: 1521
            - containerPort: 5500       
          volumeMounts:
            - name: oracle-configuration-volume
              mountPath: /home/oracle/setup/configDBora.sh
              subPath: configDBora.sh       
            - mountPath: /ORCL
              name: orcl
            - mountPath: /u01
              name: u01  
            - mountPath: /u02
              name: u02 
            - mountPath: /u03
              name: u03
            - mountPath: /u04
              name: u04
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 2Gi          
      volumes:
        - name: oracle-configuration-volume
          configMap:
            name: oracle-configuration
            defaultMode: 420      
        - name: orcl
          emptyDir: {}
        - name: u01
          emptyDir: {}
        - name: u02
          emptyDir: {}
        - name: u03
          emptyDir: {}
        - name: u04
          emptyDir: {}
---
# Source: ecommerce-oracle/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ecommerce-oracle
  labels:
    helm.sh/chart: ecommerce-oracle-0.1.1
    app.kubernetes.io/name: ecommerce-oracle
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1-SNAPSHOT"
    app.kubernetes.io/managed-by: Helm
    app.openshift.io/runtime: java
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ecommerce-oracle
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecommerce-oracle
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-ecommerce-oracle
      securityContext:
        {}
      containers:
        - name: ecommerce-oracle
          securityContext:
            {}
          image: "quay.io/maximilianopizarro/ecommerce-oracle:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
---
# Source: ecommerce-oracle/charts/oracle12c/templates/service.yaml
#
# Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
#
---
# Source: ecommerce-oracle/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: release-name-ecommerce-oracle
  labels:
    helm.sh/chart: ecommerce-oracle-0.1.1
    app.kubernetes.io/name: ecommerce-oracle
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1-SNAPSHOT"
    app.kubernetes.io/managed-by: Helm
spec:
  host: ecommerce-oracle-maximilianopizarro5-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: release-name-ecommerce-oracle
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
# Source: ecommerce-oracle/charts/oracle12c/templates/tests/test-connection.yaml
#
# Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
#

apiVersion: v1
kind: Pod
metadata:
  name: release-name-connection-test
  annotations:
    "helm.sh/hook": test-success  
  app.kubernetes.io/name: oracle12c
  app.kubernetes.io/instance: oracle12c
  app.openshift.io/runtime: oracle 
  chart: oracle12c-0.1.0
  release: release-name
  heritage: Helm
spec:
  containers:
  - name: release-name-connection-test
    image: quay.io/maximilianopizarro/oracle12c    
    command: ["sh"]
    args: [ "-c", "status=`/bin/echo -en 'set heading off\nset pagesize 0\nselect status from v\\$instance;\nexit\n' | sqlplus -S sys/$ORACLE_PWD@//$SVC_HOST:$SVC_PORT/$ORACLE_SID as sysdba`;cmdret=$?;/bin/echo \"cmdret=$cmdret, status=$status\";if [[ $status == \"OPEN\" ]]; then exit 0; else exit 1;fi " ]
  restartPolicy: Never
---
# Source: ecommerce-oracle/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-ecommerce-oracle-test-connection"
  labels:
    helm.sh/chart: ecommerce-oracle-0.1.1
    app.kubernetes.io/name: ecommerce-oracle
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1-SNAPSHOT"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-ecommerce-oracle:8080']
  restartPolicy: Never
